--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -5,5 +5,12 @@
     {% else %}
     <h1>Hello World</h1>
     {% endif %}
+
+    {% for product in products %}
+    <ul>
+
+      <li>{{product}}</li>
+    </ul>
+    {% endfor %}
   </body>
 </html>
